# AI-Med-Agent-bot

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: agents.py
src/db/: sql.py
src/faiss_storage/: index.faiss  index.pkl
src/nodes/: nodes.py
src/prompts/: prompts.py
src/rag/: retriever.py
src/schemas/: schema.py
src/tools/: tools.py
testing/: basic_agents.ipynb  rag_retriever.ipynb
