[tool.poetry]
name = "ai agent based hospital chatbot"
version = "0.1.0"
description = ""
authors = ["Saran-Kaanth <sarnknth16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
langgraph = "^0.2.74"
psycopg2-binary = "^2.9.10"
ipykernel = "^6.29.5"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.38"
langchain-openai = "^0.3.7"
langchain = "^0.3.19"
langgraph-supervisor = "^0.0.4"
faiss-cpu = "^1.10.0"
llama-index = "^0.12.20"
llama-index-vector-stores-faiss = "^0.3.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-llms-openai = "^0.3.22"
llama-index-readers-file = "^0.4.5"
fitz = "^0.0.1.dev2"
black = "^25.1.0"
langchain-groq = "^0.2.4"
llama-index-embeddings-ollama = "^0.5.0"
langchain-community = "^0.3.18"
chromadb = "^0.6.3"
llama-index-embeddings-huggingface = "^0.5.2"
llama-index-vector-stores-chroma = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
